--- a/client/src/css/sellPage.css
+++ b/client/src/css/sellPage.css
@@ -1,4 +1,4 @@
-.sell-stock-modal {
+.sell-page {
     position: fixed;
     top: 0;
     left: 0;
@@ -10,7 +10,7 @@
     justify-content: center;
   }
   
-  .modal-content {
+  .page-content {
     background: white;
     padding: 20px;
     border-radius: 8px;
