--- a/client/src/css/stockItem.css
+++ b/client/src/css/stockItem.css
@@ -2,8 +2,9 @@
     display: flex;
     justify-content: space-between;
     padding: 10px 20px;
-    border: 1px solid #696969;
-    border-radius: 5px;
+    border: 1px solid #adadad;
+    border-radius: 10px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     margin-bottom: 10px;
   }
   
